--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -22,6 +22,10 @@ body {
 	-ms-text-size-adjust: 100%;
 }
 
+main {
+    overflow: hidden;
+}
+
 
  //**********************
 // TEXT RELATED ELEMENTS
